rental summary pages

--- a/app/blocks/board/board.scss
+++ b/app/blocks/board/board.scss
@@ -54,14 +54,14 @@
   }
 
   &_pad30 {
-    padding: 26px 30px 26px;
+    padding: 26px 30px;
 
     @include screen('xlg', max, 2) {
-      padding: pxtovw(26, 1660) pxtovw(30, 1660) pxtovw(26, 1660);
+      padding: pxtovw(26, 1660) pxtovw(30, 1660);
     }
 
     @include screen('lg', max, 2) {
-      padding: pxtovw(26, 1366) pxtovw(30, 1366) pxtovw(26, 1366);
+      padding: pxtovw(26, 1366) pxtovw(30, 1366);
     }
 
     @include screen('md', max, 2) {
