--- a/app/blocks/form-elements/nd-checkbox.scss
+++ b/app/blocks/form-elements/nd-checkbox.scss
@@ -30,6 +30,16 @@
     line-height: pxtovw(20, 375);
   }
 
+  &_md-fz16 {
+    @include screen('md', max, 2) {
+      font-size: pxtovw(16, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+    }
+  }
+
   &.is-disabled {
     opacity: .2;
     cursor: default;
