--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -609,4 +609,26 @@
       margin: pxtovw(7, 375) pxtovw(4, 375);
     }
   }
+
+  &__table {
+    &:not(:first-child) {
+      margin-top: 26px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(26, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(26, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(26, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(20, 375);
+      }
+    }
+  }
 }
