--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -101,4 +101,17 @@
       }
     }
   }
+
+  &_nopad {
+    padding-top: 0;
+    padding-bottom: 0;
+
+    .is-noheader & {
+      padding-top: 0;
+    }
+
+    .is-nofooter & {
+      padding-bottom: 0;
+    }
+  }
 }
