--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -152,6 +152,31 @@
           max-width: none;
         }
       }
+
+      #{$b}_rs & {
+        margin-top: 28px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(28, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-top: 56%;
+          margin-top: pxtovw(28, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-top: 55.8%;
+          margin-top: pxtovw(23, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(64, 375);
+          height: pxtovw(45, 375);
+          padding-top: 0;
+          margin-top: 0;
+        }
+      }
     }
   }
 
@@ -268,6 +293,26 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(13, 375);
       }
+
+      #{$b}_rs & {
+        margin-top: 56px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(56, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(56, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(18, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(18, 375);
+        }
+      }
     }
   }
 
@@ -314,6 +359,12 @@
 
         @include screen('sm', max, 2) {
           margin-top: pxtovw(13, 375);
+        }
+      }
+
+      #{$b}_rs & {
+        @include screen('sm', max, 2) {
+          margin-top: 0;
         }
       }
     }
@@ -373,6 +424,10 @@
       font-family: $font-main;
     }
 
+    &_fw500 {
+      font-weight: 500;
+    }
+
     &_bold {
       font-weight: 700;
     }
@@ -397,6 +452,28 @@
       @include screen('sm', max, 2) {
         font-size: pxtovw(20, 375);
         line-height: (24 / 20);
+      }
+    }
+
+    &_fz28 {
+      font-size: 28px;
+      line-height: 1;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(28, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(28, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(13, 375);
+        line-height: 1.08;
       }
     }
 
@@ -694,6 +771,28 @@
         font-size: pxtovw(20, 375);
       }
     }
+
+    #{$b}_rs & {
+      &:not(:first-child) {
+        margin-top: 22px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(22, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(22, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(13, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(6, 375);
+        }
+      }
+    }
   }
 
   $lines: 2;
@@ -934,6 +1033,31 @@
         }
       }
     }
+
+    #{$b}_rs & {
+      padding: 0;
+
+      &:not(:first-child) {
+        margin-top: 56px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(56, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(56, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(18, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: 0;
+          margin-left: pxtovw(14, 375);
+        }
+      }
+    }
   }
 
   &__list {
@@ -990,6 +1114,28 @@
       font-size: pxtovw(12, 375);
     }
 
+    #{$b}_rs & {
+      color: $nd-color-gray-text;
+      font-size: 15px;
+      line-height: (18 / 15);
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(15, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(15, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(15, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(15, 375);
+      }
+    }
+
     span, a {
       position: relative;
       display: block;
@@ -1042,6 +1188,46 @@
             width: pxtovw(23, 375);
           }
         }
+
+        #{$b}_rs & {
+          padding-right: 28px;
+
+          @include screen('xlg', max, 2) {
+            padding-right: pxtovw(28, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            padding-right: pxtovw(28, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            padding-right: pxtovw(28, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            padding-right: pxtovw(28, 375);
+          }
+
+          &::after {
+            width: 28px;
+
+            @include screen('xlg', max, 2) {
+              width: pxtovw(28, 1660);
+            }
+
+            @include screen('lg', max, 2) {
+              width: pxtovw(28, 1366);
+            }
+
+            @include screen('md', max, 2) {
+              width: pxtovw(28, 960);
+            }
+
+            @include screen('sm', max, 2) {
+              width: pxtovw(28, 375);
+            }
+          }
+        }
       }
     }
   }
@@ -1086,6 +1272,28 @@
     }
   }
 
+  &__offers {
+    &:not(:first-child) {
+      margin-top: 58px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(58, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(58, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(48, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(48, 375);
+      }
+    }
+  }
+
   &__offer-slider {
     flex: 1;
     width: 100%;
@@ -1116,6 +1324,14 @@
     justify-content: space-between;
     width: 100%;
 
+    #{$b}_rs & {
+      @include screen('md', max, 2) {
+        flex-wrap: wrap;
+        align-items: flex-start;
+        align-content: flex-start;
+      }
+    }
+
     &:not(:last-child) {
       margin-bottom: 6px;
 
@@ -1133,6 +1349,35 @@
 
       @include screen('sm', max, 2) {
         margin-bottom: pxtovw(6, 375);
+      }
+    }
+  }
+
+  &__tube {
+    display: inline-block;
+
+    @include screen('md', max, 2) {
+      width: 100%;
+    }
+
+    &:not(:first-child) {
+      margin-left: 20px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: 0;
+        margin-top: pxtovw(17, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(17, 375);
       }
     }
   }
@@ -1278,6 +1523,43 @@
       padding: pxtovw(12, 375) pxtovw(11, 375) pxtovw(8, 375);
       border-radius: pxtovw(3, 375);
       box-shadow: pxtovw(1, 375) pxtovw(1, 375) pxtovw(1, 375) rgba(0, 0, 0, .03), pxtovw(2, 375) pxtovw(2, 375) pxtovw(2, 375) rgba(0, 0, 0, .04), pxtovw(3, 375) pxtovw(3, 375) pxtovw(3, 375) rgba(0, 0, 0, .02);
+    }
+  }
+
+  &_rs {
+    @include screen('sm', max, 2) {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      align-content: flex-start;
+      box-sizing: border-box;
+    }
+
+    #{$b} {
+      &__box {
+        width: 10px;
+        height: 10px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(10, 1660);
+          height: pxtovw(10, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(10, 1366);
+          height: pxtovw(10, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(7, 960);
+          height: pxtovw(7, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(7, 375);
+          height: pxtovw(7, 375);
+        }
+      }
     }
   }
 }
