--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -104,6 +104,7 @@ include ../blocks/note/note
 include ../blocks/notice/notice
 include ../blocks/notification/notification
 include ../blocks/offer-counters/offer-counters
+include ../blocks/offer-data/offer-data
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-list/offer-list
@@ -139,6 +140,7 @@ include ../blocks/request-status/request-status
 include ../blocks/request-type/request-type
 include ../blocks/request/request
 include ../blocks/routes/routes
+include ../blocks/rs-grid/rs-grid
 include ../blocks/scroll-form/scroll-form
 include ../blocks/scroll-form/scroll-form-v2
 include ../blocks/scroll-form/scroll-form-v3
@@ -255,6 +257,7 @@ include ../components/registration-form/registration-form
 include ../components/reservation-request/reservation-request
 include ../components/reservation-request/reservation-request-popup
 include ../components/results/results
+include ../components/rs-form/rs-form
 include ../components/search-filter/nd-search-filter
 include ../components/search-filter/search-filter
 include ../components/search-map/nd-search-map
