--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -32,3 +32,7 @@ block content
           +nd-link(href="deal-pass-chat.html") Spacepool - Deal Passpor Rent - Chat (deal-pass-chat.html)
           +nd-link(href="deal-pass-viewing-chat.html") Spacepool - Deal Passpor Viewing - Chat (deal-pass-viewing-chat.html)
           +nd-link(href="deal-pass-viewing.html") Spacepool - Deal Passpor Viewing - Dashboard (deal-pass-viewing.html)
+          +nd-link(href="rental-summary.html") Spacepool - Rental Summary (rental-summary.html)
+          +nd-link(href="rental-summary-signup.html") Spacepool - Rental Summary - Signup (rental-summary-signup.html)
+          +nd-link(href="rental-summary-signup-confirmed.html") Spacepool - Rental Summary - Signup - Email Confirmed (rental-summary-signup-confirmed.html)
+          +nd-link(href="rental-summary-login.html") Spacepool - Rental Summary - Login (rental-summary-login.html)
