--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -21,6 +21,7 @@
     transition: transform $ease-main-2s, color $ease-main-2s, font $ease-main-2s;
     z-index: 2;
     pointer-events: none;
+    will-change: transform, color, font;
 
     @include screen('sm') {
       @include text16;
