--- a/app/blocks/table/nd-table.scss
+++ b/app/blocks/table/nd-table.scss
@@ -336,6 +336,63 @@
         }
       }
     }
+
+    &_amount {
+      td, th {
+        font-size: 18px;
+        line-height: 22px;
+        padding: 15px 12px 18px 0;
+        font-weight: 500;
+
+        b {
+          font-weight: 700;
+        }
+
+        @include screen('xlg', max, 2) {
+          font-size: pxtovw(18, 1660);
+          line-height: pxtovw(22, 1660);
+          padding: pxtovw(15, 1660) pxtovw(12, 1660) pxtovw(18, 1660) 0;
+        }
+
+        @include screen('lg', max, 2) {
+          font-size: pxtovw(18, 1366);
+          line-height: pxtovw(22, 1366);
+          padding: pxtovw(15, 1366) pxtovw(12, 1366) pxtovw(18, 1366) 0;
+        }
+
+        @include screen('md', max, 2) {
+          font-size: pxtovw(16, 960);
+          line-height: pxtovw(22, 960);
+          padding: pxtovw(12, 960) pxtovw(12, 960) pxtovw(15, 960) 0;
+        }
+
+        @include screen('sm', max, 2) {
+          line-height: pxtovw(22, 375);
+          font-size: pxtovw(16, 375);
+          padding: pxtovw(12, 375) pxtovw(12, 375) pxtovw(15, 375) 0;
+        }
+
+        &.is-fz22 {
+          font-size: 22px;
+
+          @include screen('xlg', max, 2) {
+            font-size: pxtovw(22, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            font-size: pxtovw(22, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            font-size: pxtovw(18, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            font-size: pxtovw(18, 375);
+          }
+        }
+      }
+    }
   }
 
   &_features {
