--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -36,6 +36,10 @@
 
       &_tal {
         align-items: flex-start;
+
+        @include screen('sm', max, 2) {
+          align-items: center;
+        }
       }
     }
 
@@ -82,6 +86,10 @@
 
       #{$b}__header_tal & {
         text-align: left;
+
+        @include screen('sm', max, 2) {
+          text-align: center;
+        }
       }
     }
 
@@ -178,6 +186,29 @@
         margin-top: pxtovw(60, 375);
       }
     }
+
+    #{$b}_rs & {
+      margin-top: 84px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(84, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(84, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: pxtovw(32, 960) 0;
+        margin-top: pxtovw(44, 960);
+      }
+
+      @include screen('sm') {
+        padding: pxtovw(15, 375) 0;
+        margin-top: pxtovw(50, 375);
+        border-top: none;
+      }
+    }
   }
 
   &__question {
@@ -216,6 +247,16 @@
       background-image: none;
       width: 100%;
       text-align: center;
+    }
+
+    #{$b}_rs & {
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(18, 375);
+      }
     }
 
     &:not(:last-child) {
@@ -261,6 +302,12 @@
       margin-top: pxtovw(19, 375);
     }
 
+    #{$b}_rs & {
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(15, 375);
+      }
+    }
+
     &_mw110 {
       min-width: 110px;
 
@@ -279,6 +326,60 @@
       @include screen('sm', max, 2) {
         min-width: 0;
         width: 100%;
+      }
+    }
+  }
+
+  &_rs {
+    .nd-form {
+      &__text {
+        &:not(:first-child) {
+          @include screen('sm', max, 2) {
+            margin-top: pxtovw(13, 375);
+          }
+        }
+      }
+
+      &__section {
+        margin-top: 36px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(36, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(40, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(20, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(20, 375);
+        }
+      }
+
+      &__selection {
+        &:not(:first-child) {
+          margin-top: 50px;
+
+          @include screen('xlg', max, 2) {
+            margin-top: pxtovw(50, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            margin-top: pxtovw(50, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            margin-top: pxtovw(48, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            margin-top: pxtovw(60, 375);
+          }
+        }
       }
     }
   }
