--- a/app/components/messenger/messenger.scss
+++ b/app/components/messenger/messenger.scss
@@ -5,16 +5,16 @@
   display: flex;
   width: 100%;
   background-color: $nd-color-messenger-bg;
-  height: calc(100vh - (94px + 85px));
+  height: calc(100vh - (94px + 85px + 131px));
   border-radius: 3px;
 
   @include screen('xlg', max, 2) {
-    height: calc(100vh - ((9400 + 8500) / 1660) * 1vw);
+    height: calc(100vh - ((9400 + 8500 + 13100) / 1660) * 1vw);
     border-radius: pxtovw(3, 1660);
   }
 
   @include screen('lg', max, 2) {
-    height: calc(100vh - ((9400 + 8500) / 1366) * 1vw);
+    height: calc(100vh - ((9400 + 8500 + 12400) / 1366) * 1vw);
     border-radius: pxtovw(3, 1366);
   }
 
