--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -264,6 +264,7 @@ include ../components/search-map/nd-search-map
 include ../components/search-map/search-map
 include ../components/search-panel/search-panel
 include ../components/side-navigation/side-navigation
+include ../components/space-card/space-card
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/space-short/space-short
