guest account part

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -445,6 +445,12 @@
     }
   }
 
+  &_sm-h26 {
+    @include screen('sm', max, 2) {
+      height: pxtovw(26, 375);
+    }
+  }
+
   &_border {
     box-sizing: border-box;
     border: 1px solid $nd-color-border;
