--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -253,6 +253,7 @@ include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
 include ../components/popup-warning/popup-warning
 include ../components/promo/promo
+include ../components/records/records
 include ../components/registration-form/registration-form
 include ../components/reservation-request/reservation-request
 include ../components/reservation-request/reservation-request-popup
