--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -94,4 +94,14 @@
       height: pxtovw(34, 375);
     }
   }
+
+  &_sm-sz30 {
+    flex: none;
+
+    @include screen('sm', max, 2) {
+      min-width: pxtovw(30, 375);
+      width: pxtovw(30, 375);
+      height: pxtovw(30, 375);
+    }
+  }
 }
