--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -392,21 +392,26 @@
   }
 
   &_profile {
+    min-height: 368px;
     padding: 45px 0 40px;
 
     @include screen('xlg', max, 2) {
+      min-height: pxtovw(368, 1660);
       padding: pxtovw(45, 1660) 0 pxtovw(40, 1660);
     }
 
     @include screen('lg', max, 2) {
+      min-height: pxtovw(368, 1366);
       padding: pxtovw(45, 1366) 0 pxtovw(40, 1366);
     }
 
     @include screen('md', max, 2) {
+      min-height: pxtovw(368, 960);
       padding: pxtovw(45, 960) 0 pxtovw(40, 960);
     }
 
     @include screen('sm', max, 2) {
+      min-height: pxtovw(368, 375);
       padding: pxtovw(45, 375) 0 pxtovw(40, 375);
     }
   }
