--- a/app/pages/guest-account/guest-account.pug
+++ b/app/pages/guest-account/guest-account.pug
@@ -3,4 +3,18 @@ extends ../../layouts/redesign-default
 block head
   - var pageTitle = 'Spacepool - Guest Account'
 
+block bodyClasses
+  - var bodyCls = ' ';
+
+block header
+  - var headerClass = ' is-login'
+  - var pageClass = ''
+  - var isMap = false
+  - var host = false
+
 block content
+
+
+block panels
+
+block popups
